tests/bad_programs/parse_errors/duplicated_parameter_type.nc
double d(int int i) {
    return 2.0;
}
